syntax = "proto3";

package workflows;

option go_package = "github.com/clintrovert/khitomer/proto";

// Task metadata from Jira
message TaskMetadata {
  string jira_ticket_id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string assignee = 5;
  string repository_owner = 6;
  string repository_name = 7;
  string repository_url = 8;
  string base_branch = 9;
}

// Implementation plan generated by AI
message ImplementationPlan {
  string summary = 1;
  repeated PlanStep steps = 2;
  repeated string files_to_modify = 3;
  repeated string files_to_create = 4;
  string estimated_complexity = 5;
}

message PlanStep {
  int32 order = 1;
  string description = 2;
  string activity_type = 3; // codegen, testing, deployment, review
  map<string, string> parameters = 4;
}

// GitHub repository information
message RepositoryInfo {
  string owner = 1;
  string name = 2;
  string base_branch = 3;
  string feature_branch = 4;
  string clone_url = 5;
}

// PR information
message PRInfo {
  int64 pr_number = 1;
  string pr_url = 2;
  string title = 3;
  string description = 4;
  string status = 5;
}

// Workflow input
message WorkflowInput {
  TaskMetadata task = 1;
  ImplementationPlan plan = 2;
  RepositoryInfo repository = 3;
}

// Activity inputs/outputs
message CodeGenerationInput {
  string repository_path = 1;
  ImplementationPlan plan = 2;
  TaskMetadata task = 3;
}

message CodeGenerationOutput {
  repeated string modified_files = 1;
  repeated string created_files = 2;
  string summary = 3;
}

message TestingInput {
  string repository_path = 1;
  repeated string test_files = 2;
}

message TestingOutput {
  bool passed = 1;
  string output = 2;
  repeated string failures = 3;
}

message GitHubOperationInput {
  RepositoryInfo repository = 1;
  string operation = 2; // clone, branch, commit, pr
  map<string, string> parameters = 3;
}

message GitHubOperationOutput {
  bool success = 1;
  string message = 2;
  PRInfo pr_info = 3;
  string branch_name = 4;
}

message JiraUpdateInput {
  string ticket_id = 1;
  string status = 2;
  string comment = 3;
  string pr_url = 4;
  repeated string attachments = 5;
}

message JiraUpdateOutput {
  bool success = 1;
  string message = 2;
}

